=== 1.0.0 :: In Progress...

* NEW:
	* Rewrite to replace Camping/Picnic with Sinatra
	* Support for Ruby 1.9.2
	* Support for Active Record 3

=== 0.8.0

* NEW:
	* Support for localization via Ruby-GetText.
		See http://code.google.com/p/rubycas-server/wiki/Localization
		for details. [antono]
	* Switched to Picnic 0.8.x, so RubyCAS-Server is now based on Rack
		and Camping 2.0 and is now compatible with Passenger Phusion
	* Change to authenticator API: every authenticator now has a class 'setup'
		method that gets called at server startup. This is where class-level
		configuration should be done (e.g. establishing a database connection).
		This is different from the 'configure' method which gets called on a per-
		instance basis for each authenticator. [godfat]
	* Database connections are now automatically released back to the connection
		pool at the end of each request. This should allow the server to handle
		many more concurrent requests, since database connections are no longer left
		checked out of the pool.
	* Added new SQL authenticator (sql_rest_auth) compatible with the
		restful_authentication Rails plugin. [antono]
	* Re-licensed under the MIT License.

* FIXED:
	* Fixed weird problems with loading controllers when using older versions of
		activesupport and/or rubygems.
	* Failure to connect to a service during a single sign out request is now
		handled gracefully.
	* Required gem dependencies have been re-enabled in the gemspec.
	* Authlogic authenticator files added to gemspec. [rajiv]
	* Authenticators are now instantiated on a per-request basis (rather than
		once at startup) to ensure thread safety.

=== 0.7.1 :: 2008-11-10

* Fixed dependency loading problems introduced by upstream changes in RubyGems
	1.3.1.

=== 0.7.0 :: 2008-11-04

* NEW:
	* Implemented single-sign-out functionality as specified in CAS 3.3.	See
		http://www.ja-sig.org/wiki/display/CASUM/Single+Sign+Out.